--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "react-router-dom": "^5.2.0",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
-        "sass-loader": "^8.0.0"
+        "sass-loader": "^8.0.0",
+        "websocket-extensions": ">=0.1.4"
     }
 }
