--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
-        "react": "^16.2.0",
-        "react-dom": "^16.2.0",
+        "prop-types": "^15.7.2",
+        "react": "^16.8.3",
+        "react-dom": "^16.8.3",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
         "websocket-extensions": ">=0.1.4"
-    }
+    },
+    "dependencies": {}
 }
